--- a/index.html
+++ b/index.html
@@ -389,8 +389,8 @@
         </section>
 
         <!-- Footer -->
-        <footer class="mt-24 pb-12 text-center text-gray-600 text-sm">
-            Thank you.
+        <footer class="mt-24 pb-12 text-center text-red-1000 text-sm">
+            Thank you 👨‍💻.
         </footer>
 
     </div>
