--- a/index.html
+++ b/index.html
@@ -510,6 +510,10 @@
                     { 
                         name: "Management & Design", 
                         children: ["Tech Management", "Release Management", "ARD/PRD", "LLD / HLD", "Figma", "App Sec"]
+                    },
+                    { 
+                        name: "Cloud Infra", 
+                        children: ["AWS", "GCP"]
                     }
                 ]
             };
