--- a/approach.html
+++ b/approach.html
@@ -170,6 +170,13 @@
     <canvas id="background-canvas"></canvas> <div class="relative z-10">
 
         <section id="introduction" class="max-w-4xl mx-auto px-6 py-16 md:py-24">
+
+            <div class="text-center mb-12">
+        <a href="index.html" 
+           class="py-3 px-8 bg-gray-700 text-white font-semibold rounded-lg shadow-lg hover:bg-gray-600 transform hover:-translate-y-0.5 transition-all duration-200">
+            &larr; Back to Home
+        </a>
+    </div>
             <h2 class="text-3xl md:text-4xl font-bold text-white mb-8 text-center">
                 Introduction:
             </h2>
