--- a/approach.html
+++ b/approach.html
@@ -24,6 +24,15 @@
             background-repeat: no-repeat;
             background-attachment: fixed;
             overflow-x: hidden; /* Prevent horizontal scroll */
+
+            /* --- 1. ADDED: TRANSITION STYLE (FADE + ZOOM) --- */
+            transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+        }
+
+        /* --- 2. ADDED: FADE-OUT CLASS (FADE + ZOOM) --- */
+        body.fade-and-zoom-out {
+            opacity: 0;
+            transform: scale(0.95); /* Zoom out effect */
         }
 
         /* --- Sine Wave & Stars Canvas Background --- */
@@ -170,13 +179,14 @@
     <canvas id="background-canvas"></canvas> <div class="relative z-10">
 
         <section id="introduction" class="max-w-4xl mx-auto px-6 py-16 md:py-24">
-
+            
             <div class="text-center mb-12">
-        <a href="index.html" 
-           class="py-3 px-8 bg-gray-700 text-white font-semibold rounded-lg shadow-lg hover:bg-gray-600 transform hover:-translate-y-0.5 transition-all duration-200">
-            &larr; Back to Home
-        </a>
-    </div>
+                <a href="index.html" 
+                   id="back-to-home-btn"
+                   class="py-3 px-8 bg-gray-700 text-white font-semibold rounded-lg shadow-lg hover:bg-gray-600 transform hover:-translate-y-0.5 transition-all duration-200">
+                    &larr; Back to Home
+                </a>
+            </div>
             <h2 class="text-3xl md:text-4xl font-bold text-white mb-8 text-center">
                 Introduction:
             </h2>
@@ -310,6 +320,7 @@
                     <div class="glass-card p-6 md:p-8 rounded-lg">
                         <h3 class="text-2xl font-semibold text-white mb-4">2. Bringing in Data from stakeholders</h3>
                         <ul class="list-disc list-outside ml-5 space-y-3 text-gray-400">
+... (Code continued) ...
                             <li>Actively present use cases to secure buy-in, as done when onboarding more business domains at DBS by demonstrating the value of enhanced conversational AI.</li>
                         </ul>
                     </div>
@@ -910,6 +921,23 @@
             window.addEventListener('resize', resizeCanvas);
             resizeCanvas(); // Initial call includes initStars()
             animate();
+
+
+            // --- 5. ADDED: JAVASCRIPT FOR BACK-TO-HOME TRANSITION ---
+            const backBtn = document.getElementById('back-to-home-btn');
+            if (backBtn) {
+                backBtn.addEventListener('click', (e) => {
+                    e.preventDefault(); // Stop the link from navigating immediately
+                    document.body.classList.add('fade-and-zoom-out'); // Apply the animation
+                    
+                    // Wait for the animation to finish, then change page
+                    setTimeout(() => {
+                        window.location.href = 'index.html'; 
+                    }, 500); // 500ms matches your CSS transition time
+                });
+            }
+            // --- END OF ADDED SECTION ---
+
         });
     </script>
 </body>
