--- a/approach.html
+++ b/approach.html
@@ -320,7 +320,6 @@
                     <div class="glass-card p-6 md:p-8 rounded-lg">
                         <h3 class="text-2xl font-semibold text-white mb-4">2. Bringing in Data from stakeholders</h3>
                         <ul class="list-disc list-outside ml-5 space-y-3 text-gray-400">
-... (Code continued) ...
                             <li>Actively present use cases to secure buy-in, as done when onboarding more business domains at DBS by demonstrating the value of enhanced conversational AI.</li>
                         </ul>
                     </div>
@@ -936,6 +935,14 @@
                     }, 500); // 500ms matches your CSS transition time
                 });
             }
+            // --- END OF ADDED SECTION ---
+
+
+            // --- 6. ADDED: BFCACHE (Back Button) FIX ---
+            // Ensure page is visible when navigating back (using browser back button)
+            window.addEventListener('pageshow', (event) => {
+                document.body.classList.remove('fade-and-zoom-out');
+            });
             // --- END OF ADDED SECTION ---
 
         });
